--- a/config/config_dev.yml
+++ b/config/config_dev.yml
@@ -6,17 +6,9 @@ database:
   port: 33306
   db-name: apcs_dev
 
-#database:
-#  driver-name: mysql
-#  username: root
-#  password: line1234
-#  host: 127.0.0.1
-#  port: 3306
-#  db-name: test
-
 logging:
   level: debug
-  output: file  # terminal: 터미널에 color, file: 로그파일에 color
+  output: terminal  # terminal: 터미널에 color, file: 로그파일에 color
 
 webserver:
   server:
