--- a/config/config_dev.yml
+++ b/config/config_dev.yml
@@ -1,10 +1,10 @@
 database:
   driver-name: mysql
-  username: root
-  password: line1234
-  host: 127.0.0.1
-  port: 3306
-  db-name: apcs
+  username: apcs_dev
+  password: apcs@123
+  host: lineworldap.iptime.org
+  port: 33306
+  dbname: apcs_dev
 
 logging:
   level: debug
